--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "design-patterns",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.2"
   }
 }
